--- a/index.html
+++ b/index.html
@@ -12,20 +12,17 @@
 		<script type="text/javascript" src="src/playlist.js"></script>
 	</head>
 <body>
-<header><img src="src/jpmalloy.png" alt="jpmalloy.com" /></header>
-<section class="examples">
+<header>
 	<h1>JPM Playlist</h1>
+</header>
+<section>
 	<h2>Example</h2>
-	<button onclick="jpmplayer.createPlaylist()">Create Playlist</button> &nbsp; <button onclick="javascript:jpmplayer.import('create','main')">Import</button>
-	<div id="mainimport">
-	</div>
-	<div id="yourlists">
-	</div>
-	<p>Royalty free demo images and video thanks to pixabay.com. The example iframe video and image sources from YouTube are provided for educational purpose.</p>
-</section>
-<section class="examples" style="margin-top:20px">
+	<button onclick="jpmplayer.createPlaylist()">Create Playlist</button> &nbsp; <button onclick="javascript:jpmplayer.import('create','main')" id="importbutton2">Import</button>
+	<div id="mainimport"></div>
+	<div id="yourlists"></div>
 	<h2>Download</h2>
 	<p><a href="jpmplaylist.zip" download="jpmplaylist.zip">Version 1</a></p>
+	<p style="text-align:center;">Copyright &copy; 2020 - 2021 James P. Malloy All Rights Reserved.</p>
 </section>
 <script>
 	var jpmx2 = new jpmpopup({
@@ -37,7 +34,7 @@
 		//allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 		jpmx2.item = {
 		'id':'1','type':'','file':'',
-		'html':'<div class="wrap-container"><div class="left-column" id="left-column"><iframe width="760" height="515" src="" style="max-width:100%;max-height:100%;" frameborder="0" id="videoframe" allowfullscreen></iframe></div><div class="right-column" id="right-column"><div id="sidebarlist"><button onclick="jpmplayer.addForm(\'add\')" style="width:100px" id="addform">Add Videos</button><div id="addvideoform"><form method="post" action="" onsubmit="return false;"><div><input type="text" placeholder="Video Title" id="videotitle" /></div><div><input type="text" placeholder="Video URL" id="videourl" /></div><button onclick="jpmplayer.addItem(\''+id+'\')" style="width:100px">Add Video</button> &nbsp; <button onclick="jpmplayer.addForm(\'done\')" style="width:100px">Done</button></form></div><div id="playlist"></div></div></div>'
+		'html':'<div class="wrap-container"><div class="left-column" id="left-column"><iframe width="760" height="515" src="" style="max-width:100%;max-height:100%;" frameborder="0" id="videoframe" allowfullscreen></iframe></div><div class="right-column" id="right-column"><div id="sidebarlist"><button onclick="jpmplayer.addForm(\'add\')" id="addform">Add Videos</button><div id="addvideoform"><form method="post" action="" onsubmit="return false;"><div><input type="text" placeholder="Video Title" id="videotitle" /></div><div><input type="text" placeholder="Video URL" id="videourl" /></div><button onclick="jpmplayer.addItem(\''+id+'\')">Add Video</button> &nbsp; <button onclick="jpmplayer.addForm(\'done\')">Done</button></form></div><div id="playlist"></div></div></div>'
 		};
 		jpmx2.container = 'player1';
 		jpmx2.style = 'width:100%;z-index:5;background-color:rgba(0, 0, 0, 0.9)';
@@ -48,6 +45,5 @@
 	}
 	jpmplayer.getPlaylists();
 </script>
-<p style="text-align:center;">Copyright &copy; 2020 - 2021 James P. Malloy All Rights Reserved.</p>
 </body>
 </html>
