--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </header>
 <section>
 	<h2>Example</h2>
-	<button onclick="jpmplayer.createPlaylist()">Create Playlist</button> &nbsp; <button onclick="javascript:jpmplayer.import('create','main')" id="importbutton2">Import</button>
+	<button onclick="jpmplayer.createPlaylist()">Create Playlist</button> &nbsp; <button onclick="javascript:jpmplayer.import('create','main')" id="importbutton2">Import</button> &nbsp; <button onclick="javascript:jpmplayer.exportAll()">Export All</button>
 	<div id="mainimport"></div>
 	<div id="yourlists"></div>
 	<h2>Download</h2>
