--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 	<h1>JPM Playlist</h1>
 </header>
 <section>
+	<h2>News</h2><p>Version 2 is here.</p>
 	<h2>Example</h2>
 	<button onclick="jpmplayer.createPlaylist()">Create Playlist</button> &nbsp; <button onclick="javascript:jpmplayer.import('create','main')" id="importbutton2">Import</button> &nbsp; <button onclick="javascript:jpmplayer.exportAll()">Export All</button>
 	<div id="mainimport"></div>
 	<div id="yourlists"></div>
 	<h2>Download</h2>
-	<p><a href="jpmplaylist.zip" download="jpmplaylist.zip">Version 1</a></p>
+	<p><a href="jpmplaylist2.zip" download="jpmplaylist.zip">Version 2</a></p>
 	<p style="text-align:center;">Copyright &copy; 2020 - 2021 James P. Malloy All Rights Reserved.</p>
 </section>
 <script>
