--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 	<h2>Example</h2>
 	
 	<!-- Start of playlists code -->
-	<button onclick="jpmplayer.createPlaylist()">Create Playlist</button> &nbsp; <button onclick="jpmplayer.outputHTML('main')" id="importbutton2">Import</button> &nbsp; <button onclick="jpmplayer.exportAll()">Export All</button>
+	<div id="buttonlist">
+		<button onclick="jpmplayer.createPlaylist()">Create Playlist</button> <button onclick="jpmplayer.outputHTML('main')" id="importbutton2">Import</button> <button onclick="jpmplayer.exportAll()">Export All</button>
+	</div>
 	<div id="mainimport"></div>
 	<div id="yourlists"></div>
 	<!-- End of playlists code -->
@@ -33,13 +35,16 @@
 </section>
 <!-- Start of playlists code -->
 <script>
+	// overlay/popup settings
 	var jpmx2 = new jpmpopup({
 		'container':'popup-container',
 		'onclose' : function () {console.log(this);},
 		'style' :'background-color:rgba(0, 0, 0, 0.8);width:100%;z-index:5'
 	});
 	function popUp(id){
+		// optional iframe allow attr
 		//allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+		// overlay interface
 		jpmx2.item = {
 			'id':'1','type':'','file':'',
 			'html':'<div class="wrap-container"><div class="left-column" id="left-column"><iframe width="760" height="515" src="" style="max-width:100%;max-height:100%;" frameborder="0" id="videoframe" allowfullscreen></iframe></div><div class="right-column" id="right-column"><div id="sidebarlist"><button onclick="jpmplayer.addForm(\'add\')" id="addform">Add Videos</button><div id="addvideoform"><form method="post" action="" onsubmit="return false;"><div><input type="text" placeholder="Video Title" id="videotitle" /></div><div><input type="text" placeholder="Video URL" id="videourl" /></div><button onclick="jpmplayer.addItem(\''+id+'\')">Add Video</button> &nbsp; <button onclick="jpmplayer.addForm(\'done\')">Done</button></form></div><div id="playlist"></div></div></div>'
@@ -51,7 +56,15 @@
 		}
 		jpmx2.fullScreen(jpmx2.item.html);
 	}
-	jpmplayer.getPlaylists();
+	
+	jpmplayer.ini = function(){
+		// The playlist settings:
+		// the iframe URL template
+		this.serverURL = 'https://www.{domain}/embed/{vid}{query}';
+		// what users input video URL to match for
+		this.regmatch = /(http?s:\/\/www\.|http?s:\/\/|www\.)(.+)(\.com|\.be|\.ly)\/(watch\?v\=|video\/|embed\/)(.+)/i;
+		this.getPlaylists();
+	}
 </script>
 <!-- End of playlists code -->
 </body>
