--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </header>
 <section>
 	<h2>Example</h2>
+	<p style="margin-bottom:20px">A live site using it: <a href="https://www.playlistjungle.com" target="_blank">https://www.playlistjungle.com</a></p>
 	<!-- Start of playlists code -->
 	<div id="createplaylist">
 		<form method="post" action="" onsubmit="return false;">
@@ -31,6 +32,10 @@
 	<div id="buttonlist" style="margin-top:20px">
 		<button onclick="jpmplayer.outputHTML('main')" id="importbutton2">Import</button> <button onclick="jpmplayer.exportAll()">Export All</button>
 	</div>
+	<p style="margin-bottom:20px">Playlist Configuration (Optional)</p>
+	<textarea id="playlistconfig">{"config":{"allow":[{"iframe":"https://www.(domain)/(vid)","domain":"somesite.com"},{"iframe":"https://www.(domain)/embed/(vid)(query)","domain":"youtube.com"}]}}
+</textarea>
+	<button onclick="jpmplayer.setConfig()">Save</button>
 	<!-- End of playlists code -->
 	<h2>Download</h2>
 	<p><a href="jpmplaylist2.zip" download="jpmplaylist2.zip">Version 2</a></p>
