--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 	</div>
 	<p style="margin-bottom:20px">Playlist Configuration (Optional). Note: The regex in the JSON string below will only validate with this system, because the script replaces the conflicting characters. I may change this in the future. You can always just use the onPlay callback function. This is mainly for demo purposes.</p>
 	<textarea id="playlistconfig">{"config":{"regex":"/(http?s:\/\/www\.|http?s:\/\/|www\.)(.+)(\.com|\.be|\.ly)\/(watch\?v\=|video\/|embed\/)(.+)/i","allow":[{"iframe":"https://www.(domain)/embed/video/(vid)(query)","domain":"somevideosite.com"},{"iframe":"https://www.(domain)/embed/(vid)(query)","domain":"youtube.com"}]}}</textarea>
+	<div id="appstatus"></div>
 	<button onclick="jpmplayer.setConfig()">Save</button>
 	<!-- End of playlists code -->
 	<h2>Download</h2>
@@ -42,38 +43,47 @@
 </section>
 <!-- Start of playlists code -->
 <script>
-	window.onload = function() {
-		// overlay/popup settings
-		var jpmx2 = new jpmpopup({
-			'container' : 'player1',
-			'onclose': function () {console.log(this);},
-			'style' : 'width:100%;z-index:5;background-color:rgba(0, 0, 0, 0.9)',
-			'item': {'id':'1','type':'html','file':''}
-		});
-		// exe playlist app
-		jpmplayer.ini({
-			// onclick get playlist
-			'getPlaylist' : function(id){
-				// overlay interface
-				jpmx2.fullScreen('<div class="wrap-container"><div class="left-column" id="left-column"><iframe width="760" height="515" src="" style="max-width:100%;max-height:100%;" frameborder="0" id="videoframe" allowfullscreen></iframe></div><div class="right-column" id="right-column"><div id="sidebarlist"><button onclick="jpmplayer.addForm(\'add\')" id="addform">Add Videos</button><div id="addvideoform"><form method="post" action="" onsubmit="return false;"><div><input type="text" placeholder="Video Title" id="videotitle" /></div><div><input type="text" placeholder="Video URL" id="videourl" /></div><button onclick="jpmplayer.addItem(\''+id+'\')">Add Video</button> &nbsp; <button onclick="jpmplayer.addForm(\'done\')">Done</button></form></div><div id="playlist"></div></div></div>');
-				jpmplayer.getList(id);
-			},
-			// on selection of video to play
-			'onPlay' : function(){
-				// the iframe URL template
-				// use this to set iframes for different video sites
-				// {query} auto adds the key/value autoplay=1
-				if(this.domain == 'youtube.com'){
-					this.serverURL = 'https://www.{domain}/embed/{vid}{query}';
-				}else {
-					this.serverURL = 'https://www.{domain}/embed/{vid}{query}';
-				}
-			},
-			// what users input video URL to match for
-			// this is the default... also has a backup
-			'regmatch' : /(http?s:\/\/www\.|http?s:\/\/|www\.)(.+)(\.com|\.be|\.ly)\/(watch\?v\=|video\/|embed\/|embed\/video\/)(.+)/i
-		});
+	function setConfig(color) {
+		let configarea = document.getElementById("playlistconfig");
+		if(color == 'green'){
+			configarea.value, configarea.innerHTML = '{"config":{"css":"src/pop6.css","regex":"/(http?s:\/\/www\.|http?s:\/\/|www\.)(.+)(\.com|\.be|\.ly)\/(watch\?v\=|video\/|embed\/)(.+)/i","allow":[{"iframe":"https://www.(domain)/embed/video/(vid)(query)","domain":"somevideosite.com"},{"iframe":"https://www.(domain)/embed/(vid)(query)","domain":"youtube.com"}]}}';
+		}else {
+			configarea.value, configarea.innerHTML = '{"config":{"css":"src/babyblue.css","regex":"/(http?s:\/\/www\.|http?s:\/\/|www\.)(.+)(\.com|\.be|\.ly)\/(watch\?v\=|video\/|embed\/)(.+)/i","allow":[{"iframe":"https://www.(domain)/embed/video/(vid)(query)","domain":"somevideosite.com"},{"iframe":"https://www.(domain)/embed/(vid)(query)","domain":"youtube.com"}]}}';
+		}
+		jpmplayer.setConfig();
 	}
+	
+	// overlay/popup settings
+	var jpmx2 = new jpmpopup({
+		'container' : 'player1',
+		'onclose': function () {console.log(this);},
+		'style' : 'width:100%;z-index:5;background-color:rgba(0, 0, 0, 0.9)',
+		'item': {'id':'1','type':'html','file':''}
+	});
+	// exe playlist app
+	jpmplayer.ini({
+		// onclick get playlist
+		'getPlaylist' : function(id){
+			// overlay interface
+			jpmx2.fullScreen('<div class="wrap-container"><div class="left-column" id="left-column"><iframe width="760" height="515" src="" style="max-width:100%;max-height:100%;" frameborder="0" id="videoframe" allowfullscreen></iframe></div><div class="right-column" id="right-column"><div id="sidebarlist"><button onclick="jpmplayer.addForm(\'add\')" id="addform">Add Videos</button><div id="addvideoform"><form method="post" action="" onsubmit="return false;"><div><input type="text" placeholder="Video Title" id="videotitle" /></div><div><input type="text" placeholder="Video URL" id="videourl" /></div><button onclick="jpmplayer.addItem(\''+id+'\')">Add Video</button> &nbsp; <button onclick="jpmplayer.addForm(\'done\')">Done</button></form></div><div id="playlist"></div></div></div>');
+			jpmplayer.getList(id);
+		},
+		'onLoad': function() {},
+		// on selection of video to play
+		'onPlay' : function(){
+			// the iframe URL template
+			// use this to set iframes for different video sites
+			// {query} auto adds the key/value autoplay=1
+			if(this.domain == 'youtube.com'){
+				this.serverURL = 'https://www.{domain}/embed/{vid}{query}';
+			}else {
+				this.serverURL = 'https://www.{domain}/embed/{vid}{query}';
+			}
+		},
+		// what users input video URL to match for
+		// this is the default... also has a backup
+		'regmatch' : /(http?s:\/\/www\.|http?s:\/\/|www\.)(.+)(\.com|\.be|\.ly)\/(watch\?v\=|video\/|embed\/|embed\/video\/)(.+)/i
+	});
 </script>
 <!-- End of playlists code -->
 </body>
