--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 	<h1>JPM Playlist</h1>
 </header>
 <section>
+	<h2>News</h2>
+	<p>Build 1.8 - added new CSS for a more responsive iframe.</p>
+</section>
+<section>
 	<h2>Example</h2>
 	<p style="margin-bottom:20px">A live site using it: <a href="https://www.playlistjungle.com" target="_blank">https://www.playlistjungle.com</a> This script uses Local Storage.</p>
 	<!-- Start of playlists code -->
@@ -65,7 +69,7 @@
 		// onclick get playlist
 		'getPlaylist' : function(id){
 			// overlay interface
-			jpmx2.fullScreen('<div class="wrap-container"><div class="left-column" id="left-column"><iframe width="760" height="515" src="" style="max-width:100%;max-height:100%;" frameborder="0" id="videoframe" allowfullscreen></iframe></div><div class="right-column" id="right-column"><div id="sidebarlist"><button onclick="jpmplayer.addForm(\'add\')" id="addform">Add Videos</button><div id="addvideoform"><form method="post" action="" onsubmit="return false;"><div><input type="text" placeholder="Video Title" id="videotitle" /></div><div><input type="text" placeholder="Video URL" id="videourl" /></div><div id="addformbuttons"><button onclick="jpmplayer.addItem(\''+id+'\')">Add Video</button> <button onclick="jpmplayer.addForm(\'done\')">Done</button></div></form></div><div id="playlist"></div></div></div>');
+			jpmx2.fullScreen('<div class="wrap-container"><div class="left-column" id="left-column"><div class="iframe-contain"><iframe width="100%" height="100%" src="" frameborder="0" id="videoframe" allowfullscreen></iframe></div></div><div class="right-column" id="right-column"><div id="sidebarlist"><button onclick="jpmplayer.addForm(\'add\')" id="addform">Add Videos</button><div id="addvideoform"><form method="post" action="" onsubmit="return false;"><div><input type="text" placeholder="Video Title" id="videotitle" /></div><div><input type="text" placeholder="Video URL" id="videourl" /></div><div id="addformbuttons"><button onclick="jpmplayer.addItem(\''+id+'\')">Add Video</button> <button onclick="jpmplayer.addForm(\'done\')">Done</button></div></form></div><div id="playlist"></div></div></div>');
 			jpmplayer.getList(id);
 		},
 		'onLoad': function() {},
